@@ -448,12 +448,16 @@ def test_installpkg(tmpdir, newconfig):
     sdist_path = session.sdist()
     assert sdist_path == p
 
-@pytest.mark.xfailif("sys.platform == 'win32'")
+@pytest.mark.xfail("sys.platform == 'win32'", reason="test needs better impl")
 def test_envsitepackagesdir(cmd, initproj):
     initproj("pkg512-0.0.5", filedefs={
         'tox.ini': """
+        [testenv]
         commands=
-            grep '__version__.*=.*0\.0\.5' {envsitepackagesdir}/pkg512/__init__.py
+            echo X:{envsitepackagesdir}
     """})
     result = cmd.run("tox")
-
+    assert result.ret == 0
+    result.stdout.fnmatch_lines("""
+        X:*site-packages*
+    """)
